# kdemo_record

./: README.md
install/: install_ati_sensor.sh  main.sh
kdemo_matlab/: convertToMat.m  data.mat  makeQuatContinuous.m  plotData.m  trimData.m
kdemo_matlab/data/: data.mat  data_11.mat  data_12.mat  data_13.mat  data_21.mat  data_22.mat  train_data1.mat  train_data2.mat  train_data3.mat
kdemo_matlab/utils/: addpath_plot_lib.m
kdemo_matlab/utils/plot_lib/: plot_3Dpath_with_orientFrames.m
src/kdemo_record/: CMakeLists.txt  package.xml
src/kdemo_record/include/kdemo_record/: kdemo_record.h  utils.h
src/kdemo_record/include/kdemo_record/gui/: data_plot_dialog.cpp  data_plot_dialog.h  data_rec_dialog.cpp  data_rec_dialog.h  mainwindow.cpp  mainwindow.h  rec_data.cpp  rec_data.h  utils.h  view_jpos_dialog.cpp
src/kdemo_record/include/kdemo_record/robot/: dummy_robot.h  lwr4p_robot.h  robot.h
src/kdemo_record/launch/: kdemo_record_dummy.launch  kdemo_record_lwr4p.launch
src/kdemo_record/src/: main.cpp
src/kdemo_record/src/source_list/: kdemo_record.cpp  utils.cpp
src/kdemo_record/src/source_list/robot/: dummy_robot.cpp  lwr4p_robot.cpp  robot.cpp
src/robots/kuka/lwr4p/: package.xml
src/robots/kuka/lwr4p/include/lwr4p/: Robot.h
src/robots/kuka/lwr4p/src/lwr4p/: Robot.cpp
